# robotics-nav-bootcamp

./: .gitignore  LICENSE  README.md
cpp/day01/: tests.md
cpp/exercises/day01/: nav_math.cpp
cpp/nav_core/: CMakeLists.txt
cpp/nav_core/include/nav/: pose2d.hpp  transform2d.hpp
cpp/nav_core/src/: dead_reckoning.cpp  frame_transform_demo.cpp  pose2d.cpp  transform2d.cpp
cpp/nav_core/tests/: test_pose2d.cpp  test_transform2d.cpp
linux/day01/: commands.md
notes/: day01_summary.md  day02_gdb.md  day03_frames.md
